// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View Selector renders the default list view, along with buttons to change views 1`] = `
<div>
  <div
    className="button-container"
  >
    <button
      onClick={[Function]}
    >
      List
    </button>
    <button
      onClick={[Function]}
    >
      Thumbnail
    </button>
    <button
      onClick={[Function]}
    >
      Gallery
    </button>
  </div>
  <Gallery
    data={
      Array [
        Object {
          "description": "Seriously heart-melting black and tan bunny... OMG <3",
          "title": "Black & Tan",
          "url": "http://f.cl.ly/items/3g3J1G0w122M360w380O/3726490195_f7cc75d377_o.jpg",
        },
        Object {
          "description": "I don't know if this bunny fell and the picture was taken on impact, but I certainly prefer to think of it that way",
          "title": "Falling Bunny",
          "url": "http://static.boredpanda.com/blog/wp-content/uploads/2015/09/cute-bunnies-25__605.jpg",
        },
        Object {
          "description": "Is it a rodent or a rabbit? I had to look it up to be sure. Then again, I'm still not sure",
          "title": "Marshmellow Puff",
          "url": "http://static.boredpanda.com/blog/wp-content/uploads/2015/09/cute-bunnies-110__605.jpg",
        },
      ]
    }
    onDelete={[Function]}
  />
</div>
`;

exports[`View Selector renders the gallery view 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "vdia7v",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "vdia7v",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <ViewSelector
    data={
      Array [
        Object {
          "description": "Seriously heart-melting black and tan bunny... OMG <3",
          "title": "Black & Tan",
          "url": "http://f.cl.ly/items/3g3J1G0w122M360w380O/3726490195_f7cc75d377_o.jpg",
        },
        Object {
          "description": "I don't know if this bunny fell and the picture was taken on impact, but I certainly prefer to think of it that way",
          "title": "Falling Bunny",
          "url": "http://static.boredpanda.com/blog/wp-content/uploads/2015/09/cute-bunnies-25__605.jpg",
        },
        Object {
          "description": "Is it a rodent or a rabbit? I had to look it up to be sure. Then again, I'm still not sure",
          "title": "Marshmellow Puff",
          "url": "http://static.boredpanda.com/blog/wp-content/uploads/2015/09/cute-bunnies-110__605.jpg",
        },
      ]
    }
    onDelete={[Function]}
  />
</Router>
`;

exports[`View Selector renders the thumbnail view 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "id3lva",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "id3lva",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <ViewSelector
    data={
      Array [
        Object {
          "description": "Seriously heart-melting black and tan bunny... OMG <3",
          "title": "Black & Tan",
          "url": "http://f.cl.ly/items/3g3J1G0w122M360w380O/3726490195_f7cc75d377_o.jpg",
        },
        Object {
          "description": "I don't know if this bunny fell and the picture was taken on impact, but I certainly prefer to think of it that way",
          "title": "Falling Bunny",
          "url": "http://static.boredpanda.com/blog/wp-content/uploads/2015/09/cute-bunnies-25__605.jpg",
        },
        Object {
          "description": "Is it a rodent or a rabbit? I had to look it up to be sure. Then again, I'm still not sure",
          "title": "Marshmellow Puff",
          "url": "http://static.boredpanda.com/blog/wp-content/uploads/2015/09/cute-bunnies-110__605.jpg",
        },
      ]
    }
    onDelete={[Function]}
  />
</Router>
`;
